--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2697,7 +2697,7 @@
 	}
 
 		.subpage #header {
-			background: #6cc091;
+			background: #991111;
 			top: 0;
 			height: 44px;
 			line-height: 44px;
