--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1633,7 +1633,7 @@
 		}
 
 	a {
-		color: #6cc091;
+		color: #950000ff;
 		text-decoration: underline;
 	}
 
@@ -1892,6 +1892,10 @@
 		width: 100%;
 	}
 
+	#flex-nowrap {
+		flex-wrap: nowrap !important;
+	}
+
 		.flex.flex-2 {
 			-moz-justify-content: space-between;
 			-webkit-justify-content: space-between;
@@ -1974,11 +1978,11 @@
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: #6cc091;
+		background: #fff;
 		border-radius: 10px;
 		border: none;
-		border: solid 2px #8dcca9;
-		color: #fff;
+		border: solid 2px #950000ff;
+		color: #950000ff;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
@@ -2001,8 +2005,8 @@
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4bae77;
-			box-shadow: 0 0 0 1px #4bae77;
+			border-color: #950000ff;
+			box-shadow: 0 0 0 1px #950000ff;
 		}
 
 	.select-wrapper {
@@ -2090,7 +2094,7 @@
 			input[type="radio"] + label:before {
 				background: rgba(144, 144, 144, 0.075);
 				border-radius: 0;
-				border: solid 1px #8dcca9;
+				border: solid 1px #950000ff;
 				content: '';
 				display: inline-block;
 				height: 1.65em;
@@ -2104,16 +2108,16 @@
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #6cc091;
-			border-color: #6cc091;
+			background: #950000ff;
+			border-color: #950000ff;
 			color: #ffffff;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #6cc091;
-			box-shadow: 0 0 0 1px #6cc091;
+			border-color: #950000ff;
+			box-shadow: 0 0 0 1px #950000ff;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2125,27 +2129,27 @@
 	}
 
 	::-webkit-input-placeholder {
-		color: #c4e5d3 !important;
+		color: #950000ff !important;
 		opacity: 1.0;
 	}
 
 	:-moz-placeholder {
-		color: #c4e5d3 !important;
+		color: #950000ff !important;
 		opacity: 1.0;
 	}
 
 	::-moz-placeholder {
-		color: #c4e5d3 !important;
+		color: #950000ff !important;
 		opacity: 1.0;
 	}
 
 	:-ms-input-placeholder {
-		color: #c4e5d3 !important;
+		color: #950000ff !important;
 		opacity: 1.0;
 	}
 
 	.formerize-placeholder {
-		color: #c4e5d3 !important;
+		color: #950000ff !important;
 		opacity: 1.0;
 	}
 
@@ -2170,7 +2174,7 @@
 		}
 
 		.box.person {
-			border: solid 1px #8dcca9;
+			border: solid 1px #950000ff;
 			padding: 3em 1.5em;
 		}
 
@@ -2526,8 +2530,8 @@
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: transparent;
-		box-shadow: inset 0 0 0 3px #6cc091;
-		color: #6cc091 !important;
+		box-shadow: inset 0 0 0 3px #950000ff;
+		color: #950000ff !important;
 		border-radius: 30px;
 		border: 0;
 		cursor: pointer;
@@ -2549,7 +2553,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(108, 192, 145, 0.15);
+			background-color: rgba(155, 46, 46, 0.15);
 		}
 
 		input[type="submit"]:active,
@@ -2557,7 +2561,7 @@
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(108, 192, 145, 0.15);
+			background-color: rgba(155, 46, 46, 0.15);
 		}
 
 		input[type="submit"].icon,
@@ -2617,7 +2621,7 @@
 			input[type="button"].alt:hover,
 			button.alt:hover,
 			.button.alt:hover {
-				background-color: #7ec89e;
+				background-color: #950000ff;
 			}
 
 			input[type="submit"].alt:active,
@@ -2625,7 +2629,7 @@
 			input[type="button"].alt:active,
 			button.alt:active,
 			.button.alt:active {
-				background-color: #7ec89e;
+				background-color: #950000ff;
 			}
 
 			input[type="submit"].alt.icon:before,
@@ -2641,7 +2645,7 @@
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			background-color: #6cc091;
+			background-color: #950000ff;
 			color: #ffffff !important;
 		}
 
@@ -2650,7 +2654,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #7ec89e;
+				background-color: #950000ff;
 			}
 
 			input[type="submit"].special:active,
@@ -2658,7 +2662,7 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #5ab884;
+				background-color: #950000ff;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2838,7 +2842,7 @@
 		position: fixed;
 		right: 0;
 		top: 0;
-		background: #6cc091;
+		background: #950000ff;
 		color: #daefe3;
 		height: 100%;
 		max-width: 80%;
@@ -2857,7 +2861,7 @@
 		}
 
 		#navPanel a:not(.close) {
-			border-top: solid 1px #8dcca9;
+			border-top: solid 1px #950000ff;
 			color: #daefe3;
 			font-weight: 600;
 			display: block;
@@ -2960,7 +2964,7 @@
 		}
 
 		#banner .icon {
-			color: #6cc091;
+			color: #dd0000;
 			font-size: 2em;
 		}
 
@@ -3111,7 +3115,7 @@
 
 	#footer {
 		padding: 6em 0;
-		background: #6cc091;
+		background: #950000ff;
 		color: #fff;
 		text-align: center;
 	}
