--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1770,7 +1770,9 @@
 			.inner {
 				max-width: 90%;
 			}
-
+			#inner-hiw {
+				max-width: 60% !important;
+			}
 		}
 
 		@media screen and (max-width: 480px) {
@@ -2530,8 +2532,8 @@
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: transparent;
-		box-shadow: inset 0 0 0 3px #950000ff;
-		color: #950000ff !important;
+		box-shadow: inset 0 0 0 3px #950000;
+		color: #950000 !important;
 		border-radius: 30px;
 		border: 0;
 		cursor: pointer;
@@ -2553,7 +2555,9 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(155, 46, 46, 0.15);
+			box-shadow: inset 0 0 0 3px #e2e2e2;
+			background-color: rgb(155, 46, 46);
+			color: #e2e2e2 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2561,7 +2565,8 @@
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(155, 46, 46, 0.15);
+			background-color: #e2e2e2;
+			color: #e2e2e2 !important;
 		}
 
 		input[type="submit"].icon,
@@ -2621,7 +2626,7 @@
 			input[type="button"].alt:hover,
 			button.alt:hover,
 			.button.alt:hover {
-				background-color: #950000ff;
+				background-color: #950000;
 			}
 
 			input[type="submit"].alt:active,
@@ -2629,7 +2634,7 @@
 			input[type="button"].alt:active,
 			button.alt:active,
 			.button.alt:active {
-				background-color: #950000ff;
+				background-color: #950000;
 			}
 
 			input[type="submit"].alt.icon:before,
@@ -2645,7 +2650,7 @@
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			background-color: #950000ff;
+			background-color: #950000;
 			color: #ffffff !important;
 		}
 
@@ -2654,7 +2659,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #950000ff;
+				background-color: #950000;
 			}
 
 			input[type="submit"].special:active,
@@ -2662,7 +2667,7 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #950000ff;
+				background-color: #950000;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2701,7 +2706,7 @@
 	}
 
 		.subpage #header {
-			background: #991111;
+			background: #950000;
 			top: 0;
 			height: 44px;
 			line-height: 44px;
@@ -3115,7 +3120,7 @@
 
 	#footer {
 		padding: 6em 0;
-		background: #950000ff;
+		background: #950000;
 		color: #fff;
 		text-align: center;
 	}
@@ -3131,19 +3136,20 @@
 		}
 
 		#footer .copyright {
-			color: rgba(255, 255, 255, 0.5);
+			color: #e2e2e2;
 			font-size: 0.8em;
 			margin: 0 0 2em 0;
 			padding: 0;
 		}
 
 			#footer .copyright a {
-				color: rgba(255, 255, 255, 0.5);
+				color: #e2e2e2;
 				text-decoration: none;
 			}
 
 				#footer .copyright a:hover {
 					color: #FFF;
+					cursor: pointer; 
 				}
 
 		@media screen and (max-width: 980px) {
@@ -3180,7 +3186,5 @@
 		}
 		.how-it-works {
 			padding: 0 10px;
-		}
-		#hiw1, #hiw2, #hiw3, #hiw4{
-			border-right: 2px solid rgb(116, 116, 116);
+			text-align: left;
 		}
