--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2702,15 +2702,19 @@
 /* Header */
 
 	.subpage {
-		padding-top: 44px;
+		padding-top: 70px;
 	}
 
 		.subpage #header {
-			background: #950000;
+			background: #444444;
 			top: 0;
-			height: 44px;
-			line-height: 44px;
+			height: 70px;
+			line-height: 70px;
 			position: fixed;
+		}
+
+		.subpage #header .logo {
+			top: 20%;
 		}
 
 	#header {
@@ -2776,6 +2780,7 @@
 				height: 4em;
 				width: 4em;
 				z-index: 10003;
+				padding-top: 25;
 			}
 
 				#header a.navPanelToggle .fa {
